--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/express": "^4.17.13",
     "@types/jest": "^27.4.1",
     "@types/jsonwebtoken": "^8.5.8",
+    "@types/mime": "^2.0.3",
     "@types/multer": "^1.4.7",
     "@types/nodemailer": "^6.4.4",
     "@types/supertest": "^2.0.11",
@@ -36,6 +37,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "aws-sdk": "^2.1117.0",
     "bcryptjs": "^2.4.3",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.10.8",
@@ -43,6 +45,7 @@
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
     "jsonwebtoken": "^8.5.1",
+    "mime": "^3.0.0",
     "multer": "^1.4.4",
     "nodemailer": "4.1.0",
     "pg": "^8.7.1",
