--- a/package.json
+++ b/package.json
@@ -39,8 +39,10 @@
   "dependencies": {
     "aws-sdk": "^2.1117.0",
     "bcryptjs": "^2.4.3",
+    "class-transformer": "^0.5.1",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.10.8",
+    "dotenv": "^16.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
     "handlebars": "^4.7.7",
