--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "aws-sdk": "^2.1117.0",
     "bcryptjs": "^2.4.3",
     "class-transformer": "^0.5.1",
+    "cors": "^2.8.5",
     "csv-parse": "^5.0.4",
     "dayjs": "^1.10.8",
     "dotenv": "^16.0.0",
