--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@babel/node": "^7.17.10",
     "@babel/plugin-proposal-class-properties": "^7.17.12",
     "@babel/plugin-proposal-decorators": "^7.17.12",
+    "@babel/plugin-transform-typescript": "^7.18.1",
     "@babel/preset-env": "^7.18.0",
     "@babel/preset-typescript": "^7.17.12",
     "@types/bcryptjs": "^2.4.2",
