--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,14 +24,15 @@
     "module": "commonjs", /* Specify what module code is generated. */
     // "rootDir": "./",                                  /* Specify the root folder within your source files. */
     // "moduleResolution": "node",                       /* Specify how TypeScript looks up a file from a given module specifier. */
-   //  "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
-    /* "paths": {
-       "@modules/*" : ["modules/*"],
-       "@config/*" : ["config/*"],
-       "@shared/*" : ["shared/*"],
-       "@errors/*": ["errors/*"]
+     "baseUrl": "./src",                                  /* Specify the base directory to resolve non-relative module names. */
+     "paths": {
+      "@modules/*": ["modules/*"],
+      "@config/*": ["config/*"],
+      "@shared/*": ["shared/*"],
+      "@errors/*": ["errors/*"]
+
      },       
-     */                               /* Specify a set of entries that re-map imports to additional lookup locations. */
+                                /* Specify a set of entries that re-map imports to additional lookup locations. */
     // "rootDirs": [],                                   /* Allow multiple folders to be treated as one when resolving modules. */
     "typeRoots": [
       "@types",
