Updating main.yml 2

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -33,7 +33,7 @@ jobs:
            host: ${{ secrets.SSH_HOST }}
            username: ${{ secrets.SSH_USER }}
            port: ${{ secrets.SSH_PORT }}
-           key: ${{ secrets.SSH_KEY }}
+           password: ${{ secrets.PASSWORD }}
            source: "., !node_modules"
            target: "test"
       
