--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
            port: ${{ secrets.SSH_PORT }}
            key: ${{ secrets.SSH_KEY }}
            source: "., !node_modules"
-           target: "test"
+           target: "~/app/rentalx-ignite"
       
 
      
