--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -38,7 +38,7 @@ jobs:
            target: "~/app/rentalx-ignite"
        
       - name: Update API
-      - uses: appleboy/scp-action@master
+        uses: appleboy/scp-action@master
         with:
            host: ${{ secrets.SSH_HOST }}
            username: ${{ secrets.SSH_USER }}
