--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@types/redis": "^4.0.11",
     "aws-sdk": "^2.1117.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -66,6 +67,8 @@
     "multer": "^1.4.4",
     "nodemailer": "4.1.0",
     "pg": "^8.7.1",
+    "rate-limiter-flexible": "^2.3.7",
+    "redis": "^4.1.0",
     "reflect-metadata": "^0.1.13",
     "supertest": "^6.2.2",
     "swagger-ui-express": "^4.3.0",
