--- a/.env.example
+++ b/.env.example
@@ -17,6 +17,10 @@ disk=local
 
 MAIL_PROVIDER=ethereal
 
+## REDIS
 REDIS_HOST=localhost
 REDIS_PORT=6379
 REDIS_PASSWORD=
+
+## SENTRY
+SENTRY_DSN=
