--- a/package.json
+++ b/package.json
@@ -50,7 +50,10 @@
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@sentry/node": "^6.19.7",
+    "@sentry/tracing": "^6.19.7",
     "@types/redis": "^4.0.11",
+    "add": "^2.0.6",
     "aws-sdk": "^2.1117.0",
     "axios": "^0.27.2",
     "bcryptjs": "^2.4.3",
@@ -74,6 +77,7 @@
     "swagger-ui-express": "^4.3.0",
     "tsyringe": "^4.6.0",
     "typeorm": "^0.2.41",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "yarn": "^1.22.18"
   }
 }
