--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -23,10 +23,14 @@ jobs:
         with:
           node-version: 16.x
       - name: Install Dependencies
-        run: yarn
+        run: yarn --frozen-lockfile
         
+      - name: Run all tests
+        run: yarn test
+      
       - name: Build
         run: yarn build
+
         
       -  uses: appleboy/scp-action@master
          with:
