--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,7 +43,7 @@ jobs:
       - name: Connect to PostgreSQL
         # Runs a script that creates a PostgreSQL table, populates
         # the table with data, and then retrieves the data
-        run: psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'rentx_test'" | grep -q 1 | psql -U postgres -c "CREATE DATABASE rentx_test"
+        run: psql -U postgres -tc "SELECT 1 FROM pg_database WHERE datname = 'rentx_test'" | grep -q 1 | psql -U postgres -c "CREATE DATABASE rentx_test" postgresql://postgres:postgres@localhost:5432/postgres
 
       - name: Setup Nodeks
         uses: actions/setup-node@v2
