--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,7 +25,10 @@ jobs:
         image: postgres
         # Provide the password for postgres
         env:
-          POSTGRES_PASSWORD: postgres
+          POSTGRES_PASSWORD: docker
+          POSTGRES_USER: ignite
+          POSTGRES_DB: 'rentx_test'
+
         # Set health checks to wait until postgres has started
         options: >-
           --health-cmd pg_isready
